--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 </script>
 <!-- Add Babel for in-browser JSX/TSX transpilation -->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!-- Google API Libraries for Google Doc Logging -->
+<script src="https://apis.google.com/js/api.js"></script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
