--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@~18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@~18.2.0/",
-    "react/": "https://esm.sh/react@~18.2.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.9.0"
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.15.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
   }
 }
 </script>
 <!-- Add Babel for in-browser JSX/TSX transpilation -->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<!-- Google API Libraries for Google Doc Logging -->
-<script src="https://apis.google.com/js/api.js"></script>
-<script src="https://accounts.google.com/gsi/client" async defer></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
@@ -46,6 +44,7 @@
       IMPORTANT: You must replace the empty string with your actual Google Gemini API key for the AI to work.
     -->
     <script>
+      // Replace '' with your actual Google Gemini API Key
       window.process = { env: { API_KEY: 'AIzaSyAzGrDB6XZ4efvVFPOecNBM-kUByunv4kY' } };
     </script>
 
