--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     "react": "https://esm.sh/react@18.3.1",
     "react/": "https://esm.sh/react@18.3.1/",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.15.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
+    "@google/genai": "https://esm.sh/@google/genai@1.15.0"
   }
 }
 </script>
