--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-image: url('/MentalHealthMeetsAI.github.io/assets/background-C2YXECTo.jpg');
+        background-image: url('/MentalHealthMeetsAI/assets/background-C2YXECTo.jpg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
