--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ACT Companion AI</title>
-
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Custom Styles -->
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -23,23 +17,33 @@
         background-attachment: fixed;
       }
     </style>
-  </head>
-
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "@google/genai": "https://esm.sh/@google/genai",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/"
+  }
+}
+</script>
+<!-- Add Babel for in-browser JSX/TSX transpilation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<link rel="stylesheet" href="/index.css">
+</head>
   <body>
     <div id="root"></div>
-
-    <!-- API key shim for Google Gemini -->
-    <script>
-      window.process = {
-        env: {
-          API_KEY: 'AIzaSyAzGrDB6XZ4efvVFPOecNBM-kUByunv4kY' // 🔑 Replace with your real key before pushing if needed
-        }
-      };
-    </script>
-
-    <!-- Vite will automatically inject the correct script below during build -->
-    <!-- ✅ Don't add any <script src="./index.tsx"> or similar -->
-    <!-- ✅ After build, `dist/index.html` will include the correct hashed asset JS -->
-
-  </body>
+    
+    <!-- Load config file before the main app script -->
+    <script src="./config.js"></script>
+    
+    <!-- 
+      The script type is changed to "text/babel" to be processed by Babel Standalone.
+      data-presets tells Babel to use presets for React and TypeScript.
+      data-type="module" is crucial for Babel to handle ES module imports/exports correctly.
+    -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
